--- a/templates/icinga2.conf.erb
+++ b/templates/icinga2.conf.erb
@@ -40,6 +40,7 @@ include "zones.conf"
  */
 include <itl>
 include <plugins>
+include <windows-plugins>
 
 /**
  * The features-available directory contains a number of configuration
